--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                         <button type="button" onclick="set_number(this.value)" value="9" class="btn btn-light">9</button>
                     </div>
                 </div>  
-                <button type="button" onclick="calc()" value="=" class="btn equal">=</button>
+                <button type="button" onclick="get_result()" value="=" class="btn equal">=</button>
             </div>
         </div>
     </main>
 
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/dist/main.js"></script>
 </body>
 </html>
